degre fini, continuer